--- a/GPS Sim/Properties/Resources.resx
+++ b/GPS Sim/Properties/Resources.resx
@@ -118,7 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="004-intersection_80px_70percentOpacity" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\004-intersection_80px_70percentOpacity.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="015-geolocation_80px_70percentOpacity" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\015-geolocation_80px_70percentOpacity.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="007-cars_15percent_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\007-cars_15percent_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="021-destination_80px_70percentOpacity" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\021-destination_80px_70percentOpacity.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
